more responsive css with proper navbar

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,23 +14,24 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">WebSiteName</a>
+            <a class="navbar-brand" href="/">E-cell of REC</a>
           </div>
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="/">Page 1</a></li>
-            <li><a href="#">Page 2</a></li>
-            <li><a href="#">Page 3</a></li>
+            <li><a href="/aboutus">Who We Are</a></li>
+            <li><a href="/masterpiecemoments">Masterpiece Moments</a></li>
+            <li><a href="/team">The Entrepreneurs Within</a></li>
+            <li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
+
           </ul>
         </div>
       </nav>
-    <div class="gradient-background">
     <div class="entry-animation">
         <div class="header">
             <h1 class="logo">Entrepreneurship Development Cell</h1>
             <p class="tagline">EXPLORE...........INNOVATE.............INCUBATE</p>
         </div>
-    </div>
+    
 
 </body>
 </html>
