--- a/static/gallery.css
+++ b/static/gallery.css
@@ -2,11 +2,11 @@
 
     padding: 0;
     margin: 0;
-    background-color: black;
 }
 
 body {
-    width: 60%;
+    width: 100%;
+    background-color: black;
     height: 100vh;
     margin: 0px auto;
     font-family: "Open Sans", sans-serif;
@@ -30,6 +30,7 @@ body h1 {
     font-size: 1.5em;
     font-weight: bold;
     margin-bottom: 10px;
+    color: white;
 }
 
 .photo-gallery-container {
