--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@ body {
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
-  background: linear-gradient(to right, #1c81c4, #ed2b15);
+  background: linear-gradient(to right, #000000, #000000);
   overflow: hidden; 
 }
 
@@ -38,13 +38,14 @@ body {
 .logo {
   font-size: 4em; 
   margin-bottom: 10px;
+  color:aqua;
 }
 
 .tagline {
   font-size: 4em;
   font-weight: bold; 
   margin-top: 10px;
-  color:black;
+  color:aqua;
 }
 
 
@@ -57,12 +58,7 @@ body {
   }
 }
 
-.gradient-background {
-  background: linear-gradient(to right, #1c81c4, #ed2b15);
-  height: 100vh;
-  overflow: hidden;
-  position: relative;
-}
+
 
 .tagline {
   font-size: 18px;
