--- a/static/team.css
+++ b/static/team.css
@@ -2,10 +2,16 @@
 	 box-sizing: border-box;
 	 padding: 0;
 	 margin: 0;
-     background-color: black;
+}
+.content{
+	width: 100%;
+	 height: 100vh;
+	 margin: 0px auto;
+	 font-family: "Open Sans", sans-serif;
 }
  body {
-	 width: 60%;
+	 width:100%;
+	 background-color: black;
 	 height: 100vh;
 	 margin: 0px auto;
 	 font-family: "Open Sans", sans-serif;
@@ -81,43 +87,21 @@
 	 margin-top: -70px;
 }
 
- @media screen and (max-width: 1440px) {
-	 body {
-		 width: 70%;
-	}
-	 body main {
-		 column-gap: 50px;
-	}
-}
+
  @media screen and (max-width: 1024px) {
-	 body {
-		 width: 80%;
-	}
+	 
 	 body main {
 		 column-gap: 35px;
 	}
 }
- @media screen and (max-width: 768px) {
-	 body {
-		 width: 90%;
-	}
+ @media screen and (max-width: 768px)  {
+	 
 	 body main {
 		 column-gap: 25px;
 	}
 }
  @media screen and (max-width: 600px) {
-	 body {
-		 width: 90%;
-		 height: auto;
-		 margin: 50px auto 10px;
-	}
-	 body header {
-		 height: auto;
-		 display: flex;
-		 flex-direction: column;
-		 justify-content: center;
-		 row-gap: 20px;
-	}
+	 
 	 body header .title {
 		 align-self: flex-start;
 	}
