--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,40 @@
             <h1 class="logo">Entrepreneurship Development Cell</h1>
             <p class="tagline">EXPLORE...........INNOVATE.............INCUBATE</p>
         </div>
-    
+    </div>
+    <div class="card" id="who-we-are">
+      <h1>Who We Are</h1>
+      <p>
+          The Entrepreneurship development cell of REC is committed to creating a high-impact entrepreneurial ecosystem
+          and expanding it to society through initiatives like interactive sessions, competitions, conferences, and business
+          incubation services. With close to 25 years of existence, the E-Cell at the College takes pride in having equipped
+          entrepreneurs and their ventures. In the process, EDC had crossed many milestones by creating many first-generation
+          entrepreneurs backing them up during their incubating days.
+          <br><a href="/aboutus" class="learn-more-link">Learn More</a>
+      </p>
+  </div>
+
+  <div class="card">
+      <div class="vision-mission-item">
+          <h2>Vision</h2>
+          <p>
+              To identify and empower Student Entrepreneurs for Job Creation and Wealth Generation aiding in the development
+              of the nation.To create an entrepreneurial ecosystem that provides the platform for individuals with creative minds
+              and ideas with potential for substantial business opportunities.
+          </p>
+      </div>
+  </div>
+      <div class="card">
+      <div class="vision-mission-item">
+          <h2>Mission</h2>
+          <p>
+              To pragmatically educate the various nuances of Entrepreneurship imbibed with talent nourishment and capacity
+              building. To provide the right environment and identify opportunities to develop and empower globally competent
+              entrepreneurs.
+              To set up an ecosystem for experimenting, learning, and to incubate companies in their early stages of growth.
+          </p>
+      </div>
+  </div>
 
 </body>
 </html>
