--- a/templates/team.html
+++ b/templates/team.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Entrepreneurs Within</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-
+    <link rel="icon" type="image/x-icon" href="static/images/icons/logo.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
@@ -22,7 +22,7 @@
                 <li><a href="/aboutus">Who We Are</a></li>
                 <li><a href="/masterpiecemoments">Masterpiece Moments</a></li>
                 <li class="active"><a href="/team">The Entrepreneurs Within</a></li>
-                <li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
+                <li><a href="/visionvault">VisionVault Exchange</a></li>
     
               </ul>
             </div>
