--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EDC Evolution</title>
   <link rel="stylesheet" href="static/about.css">
+  <link rel="icon" type="image/x-icon" href="static/images/icons/logo.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -28,7 +29,7 @@
             <li class="active"><a href="/aboutus">Who We Are</a></li>
 	        <li><a href="/masterpiecemoments">Masterpiece Moments</a></li>
     	    <li><a href="/team">The Entrepreneurs Within</a></li>
-        	<li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
+        	<li><a href="/visionvault">VisionVault Exchange</a></li>
 
           </ul>
         </div>
