--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event Photo Galleries</title>
+    <title>Event Photo Gallery</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-
+    <link rel="icon" type="image/x-icon" href="static/images/icons/logo.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="static/gallery.css">
@@ -28,7 +28,7 @@
             <li ><a href="/aboutus">Who We Are</a></li>
 	        <li class="active"><a href="/masterpiecemoments">Masterpiece Moments</a></li>
     	    <li><a href="/team">The Entrepreneurs Within</a></li>
-        	<li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
+        	<li><a href="/visionvault">VisionVault Exchange</a></li>
 
           </ul>
         </div>
