--- a/templates/index.html
+++ b/templates/index.html
@@ -21,17 +21,28 @@
             <li><a href="/aboutus">Who We Are</a></li>
             <li><a href="/masterpiecemoments">Masterpiece Moments</a></li>
             <li><a href="/team">The Entrepreneurs Within</a></li>
-            <li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
+            <li><a href="/visionvault">VisionVault Exchange</a></li>
 
           </ul>
         </div>
       </nav>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     <div class="entry-animation">
+        <img id="#logoimg"src="static/images/icons/logo.png" width="28%">
         <div class="header">
             <h1 class="logo">Entrepreneurship Development Cell</h1>
             <p class="tagline">EXPLORE...........INNOVATE.............INCUBATE</p>
         </div>
     </div>
+
     <div class="card" id="who-we-are">
       <h1>Who We Are</h1>
       <p>
