added and more css given to the website

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,6 +76,14 @@
           </p>
       </div>
   </div>
-
+  <footer>
+    <div>
+        <h3>Contact Information</h3>
+        <p>Email: <a href="mailto:coordinator@example.com">coordinator@example.com</a></p>
+        <p>Email: <a href="mailto:president@example.com">president@example.com</a></p>
+        <p>Coordinator: +123456789</p>
+        <p>President: +987654321</p>
+    </div>
+</footer>
 </body>
 </html>
