--- a/static/gallery.css
+++ b/static/gallery.css
@@ -55,3 +55,23 @@ body h1 {
 .photo-gallery img:hover {
     filter: brightness(120%); /* Adjust brightness on hover */
 }
+
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  footer h3 {
+    margin-bottom: 10px;
+  }
+  
+  footer p {
+    margin: 5px 0;
+  }
+  
+  footer a {
+    color: #fff;
+    text-decoration: none;
+  }
