--- a/static/style.css
+++ b/static/style.css
@@ -79,7 +79,25 @@ body {
 
   font-weight: bold;
 }
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
 
+footer h3 {
+  margin-bottom: 10px;
+}
+
+footer p {
+  margin: 5px 0;
+}
+
+footer a {
+  color: #fff;
+  text-decoration: none;
+}
 @media only screen and (max-width: 600px) {
   .card {
       width:80%;
