--- a/static/team.css
+++ b/static/team.css
@@ -87,7 +87,25 @@
 	 margin-top: -70px;
 }
 
-
+footer {
+	background-color: #333;
+	color: #fff;
+	padding: 20px;
+	text-align: center;
+  }
+  
+  footer h3 {
+	margin-bottom: 10px;
+  }
+  
+  footer p {
+	margin: 5px 0;
+  }
+  
+  footer a {
+	color: #fff;
+	text-decoration: none;
+  }
  @media screen and (max-width: 1024px) {
 	 
 	 body main {
