--- a/static/visionvault.css
+++ b/static/visionvault.css
@@ -85,3 +85,23 @@ a:hover {
     
 }
 }
+
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  footer h3 {
+    margin-bottom: 10px;
+  }
+  
+  footer p {
+    margin: 5px 0;
+  }
+  
+  footer a {
+    color: #fff;
+    text-decoration: none;
+  }
