--- a/templates/visionvault.html
+++ b/templates/visionvault.html
@@ -27,9 +27,9 @@
         </div>
       </nav>
     <div id="container">
-
+        <h2 class="section-title">Upcoming Events</h2>
         <div id="events-container">
-            <h2 class="section-title">Upcoming Events</h2>
+            
             <div class="event-card">
                 <h2>Event One</h2>
                 <p>Date: March 10, 2024</p>
@@ -44,24 +44,35 @@
                 <a href="#" class="registration-form-link">Registration Form</a>
             </div>
             <div class="event-card">
-                <h2>Event One</h2>
+                <h2>Event Three</h2>
                 <p>Date: March 10, 2024</p>
                 <p>Details: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <a href="#" class="registration-form-link">Registration Form</a>
             </div>
 
             <div class="event-card">
-                <h2>Event Two</h2>
+                <h2>Event Four</h2>
                 <p>Date: April 15, 2024</p>
                 <p>Details: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <a href="#" class="registration-form-link">Registration Form</a>
             </div>
         </div>
-
+        <h2 class="section-title">Startup Ideas Submission</h2>
         <div id="startup-ideas-container">
-            <h2 class="section-title">Startup Ideas Submission</h2>
+            
             <p>
-                Our goal is to incubate 25 startups by the end of the year at Rajalakshmi Engineering College. We invite all students with innovative ideas to fill out the form below. Don't hesitate to share your thoughts; every idea counts!
+                Dear Students and Faculty Members,<br><br>
+
+                With reference to our earlier mail regarding Start-ups, we have dedicated ourselves to fostering a culture of innovation and entrepreneurship, making 2024 the "Year of Start-ups at REC!".
+                <br><br>
+                As you are aware, our Vice Chairman's main goal is to create 25 startups originating from the vibrant minds at REC within this calendar year! This ambitious initiative not only showcases the college's commitment to innovation but also provides a platform for students and faculty to turn their innovative ideas into reality.
+                <br><br>
+                We firmly believe in the power of ideas and the spirit of innovation that our faculty and students possess. To harness this potential, we are inviting start-up incubation proposals aligned with their monthly themes, each representing a sphere where technology can create impactful solutions.
+                <br><br>
+                Here's a quick glimpse of our themes: Agriculture Tech, Women in Tech, Everyday AI, EdTech, 
+                Sustainable Tech, Creative AI, Tech Entrepreneurship, HealthTech, Festive Technology, Social Impact Tech, The Future of AI
+                <br><br>
+                Please submit your ideas @ the link given below.
             </p>
             <a href="#" class="idea-submission-form-link">Submit Your Startup Idea</a>
         </div>
