--- a/static/about.css
+++ b/static/about.css
@@ -211,7 +211,28 @@ img {
   border: 1px solid #eee;
   background: white;
 }
+footer {
+  background-color: #000000;
+  color: #fff;
+  padding: 10px;
+  display: flex;
+  justify-content:center;
+  text-align: center;
+}
 
+footer h3 {
+  margin-bottom: 10px;
+}
+
+footer p {
+  margin: 5px 0;
+  text-align: center;
+}
+
+footer a {
+  color: #fff;
+  text-decoration: none;
+}
 /* Some mobile improvements I did after the demo was finished :) I know this could be done a bit more optimised if i'd done it right away */
 @media screen and (width <= 600px) {
   main::before {
