Added back to top button in all the pages

--- a/static/team.css
+++ b/static/team.css
@@ -86,7 +86,25 @@
  body main .profile:nth-child(6) {
 	 margin-top: -70px;
 }
-
+.top {
+	--offset: 50px; 
+	
+	position: sticky;
+	bottom: 20px;      
+	margin-right:10px; 
+	place-self: end;
+	margin-top: calc(100vh + var(--offset));
+	
+	/* visual styling */
+	text-decoration: none;
+  
+	padding: 10px;
+	font-family: sans-serif;
+	color: #000000;
+	background: #ffffff;
+	border-radius: 100px;
+	white-space: nowrap;
+  }
 footer {
 	background-color: #000000;
 	color: #fff;
