--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -167,6 +167,7 @@
 		</article>
 	  
 </main>
+<a href="#" class="top">Back to Top &#8593;</a>
 	  <footer>
 		<div>
 			<h3>Contact Information</h3>
