--- a/static/gallery.css
+++ b/static/gallery.css
@@ -55,7 +55,25 @@ body h1 {
 .photo-gallery img:hover {
     filter: brightness(120%); /* Adjust brightness on hover */
 }
-
+.top {
+    --offset: 50px; 
+    
+    position: sticky;
+    bottom: 20px;      
+    margin-right:10px; 
+    place-self: end;
+    margin-top: calc(100vh + var(--offset));
+    
+    /* visual styling */
+    text-decoration: none;
+  
+    padding: 10px;
+    font-family: sans-serif;
+    color: #000000;
+    background: #ffffff;
+    border-radius: 100px;
+    white-space: nowrap;
+  }
 footer {
     background-color: #000000;
     color: #fff;
