--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,25 @@ body {
   overflow: hidden; 
   overflow-y: auto; 
 }
+.top {
+  --offset: 50px; 
+  
+  position: sticky;
+  bottom: 20px;      
+  margin-right:10px; 
+  place-self: end;
+  margin-top: calc(100vh + var(--offset));
+  
+  /* visual styling */
+  text-decoration: none;
 
+  padding: 10px;
+  font-family: sans-serif;
+  color: #000000;
+  background: #ffffff;
+  border-radius: 100px;
+  white-space: nowrap;
+}
 .entry-animation {
   position: relative;
   width: auto;
