--- a/static/visionvault.css
+++ b/static/visionvault.css
@@ -6,6 +6,25 @@ body {
     padding: 0;
     display: block;
 }
+.top {
+    --offset: 50px; 
+    
+    position: sticky;
+    bottom: 20px;      
+    margin-right:10px; 
+    place-self: end;
+    margin-top: calc(100vh + var(--offset));
+    
+    /* visual styling */
+    text-decoration: none;
+  
+    padding: 10px;
+    font-family: sans-serif;
+    color: #000000;
+    background: #ffffff;
+    border-radius: 100px;
+    white-space: nowrap;
+  }
 #events-container, #startup-ideas-container {
     flex: 1;
     padding: 20px ;
