--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -63,6 +63,7 @@
         </div>
 
     </div>
+    <a href="#" class="top">Back to Top &#8593;</a>
     <footer>
         <div>
             <h3>Contact Information</h3>
