--- a/templates/visionvault.html
+++ b/templates/visionvault.html
@@ -78,7 +78,7 @@
         </div>
 
     </div>
-
+    <a href="#" class="top">Back to Top &#8593;</a>
     <footer>
         <div>
             <h3>Contact Information</h3>
