--- a/static/about.css
+++ b/static/about.css
@@ -206,10 +206,11 @@ p {
 }
 
 img {
-  width: 200px;
+  width: 100%;
   margin-block-start: 1.05rem;
   border: 1px solid #eee;
   background: white;
+  justify-content: center;
 }
 .top {
   --offset: 50px; 
